# dtradco

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md
params/: staging.json  test-prod.json  test-staging.json
src/: lib.rs  main.rs
src/maker/: mod.rs
src/maker/algos/: mod.rs
src/maker/algos/perp_mm/: algo.rs  mod.rs  params.rs
src/maker/market/: data.rs  mod.rs  tasks.rs
