[package]
name = "dtradco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
###########
# Cockpit #
###########
lyra-client = { git = "https://github.com/derivexyz/cockpit.git" }
lyra-utils = { git = "https://github.com/derivexyz/cockpit.git" }
orderbook-types = { git = "https://github.com/derivexyz/cockpit.git" }

############
# External #
############
axum = { version = "0.7.0", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }

# Uuid v4
uuid = { version = "1.4.1", features = ["v4"] }

# Tokio & Tower
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["trace", "cors"] }

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"

# Encryption
jsonwebtoken = "9.1.0"
bcrypt = "0.15.0"

# ENV Variables
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"

# Date & time
chrono = "0.4.23"

# Struct/Extractor validator
validator = { version = "0.16.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Swagger Docs API
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }

# ORM
sea-orm = { version = "0.12.7", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# General
anyhow = "1.0.93"
bigdecimal = { version = "0.4.6", features = ["serde-json"] }
futures = "0.3.31"
